the prefactor should be ready, but we still miss some log info files

--- a/run_globgm/model_tools_src/python/pcr-globwb/ini_files_2024-09-XX/steady-state_config_edwin_vdevelop.ini
+++ b/run_globgm/model_tools_src/python/pcr-globwb/ini_files_2024-09-XX/steady-state_config_edwin_vdevelop.ini
@@ -2,7 +2,7 @@
 
 # Set the pcrglobwb output directory in an absolute path.
 #~ outputDir = OUT_DIR/$tile$/
-outputDir    = /scratch-shared/edwinbar/test_globgm/
+outputDir    = /scratch-shared/edwinbar/test_globgm/java/
 
 
 # Set the input directory map in an absolute path.
@@ -39,33 +39,22 @@ modflowOfflineCoupling = True
 
 
 # linear_multiplier_for_kh_unconsolidated: 0.1 , 1.0 , 10.0
-linear_multiplier_for_kh_unconsolidated    = 
-boolean_in_scalar_map_of_unconsolidated    = /scratch-shared/edwinbar/recession_coefficient_version_2024-10-01/using_hand_threshold_5m/30sec_THIRD-TRY/
+linear_multiplier_for_kh_unconsolidated    = 0.1
+boolean_in_scalar_map_of_unconsolidated    = /scratch-shared/edwinbar/recession_coefficient_version_2024-10-01/using_hand_threshold_5m/30sec/unconsolidated_class_v20241001.map
 
 # linear_multiplier_for_kh_consolidated: 0.1 , 1.0 , 10.0
-linear_multiplier_for_kh_consolidated      = 
-boolean_in_scalar_map_of_consolidated      = /scratch-shared/edwinbar/recession_coefficient_version_2024-10-01/using_hand_threshold_5m/30sec_THIRD-TRY/
+linear_multiplier_for_kh_consolidated      = 0.1
+boolean_in_scalar_map_of_consolidated      = /scratch-shared/edwinbar/recession_coefficient_version_2024-10-01/using_hand_threshold_5m/30sec/consolidated_class_v20241001.map
 
 # linear_multiplier_for_kh_carbonate: 0.1 , 1.0 , 10.0
-linear_multiplier_for_kh_carbonate         = 
-boolean_in_scalar_map_of_carbonate         = /scratch-shared/edwinbar/recession_coefficient_version_2024-10-01/using_hand_threshold_5m/30sec_THIRD-TRY/carbonate_class_v20241001.map
+linear_multiplier_for_kh_carbonate         = 10.0
+boolean_in_scalar_map_of_carbonate         = /scratch-shared/edwinbar/recession_coefficient_version_2024-10-01/using_hand_threshold_5m/30sec/carbonate_class_v20241001.map
 
 # linear_multiplier_for_kv_confining_layer: 0.1 , 1.0
-linear_multiplier_for_kv_confining_layer   = 
+linear_multiplier_for_kv_confining_layer   = 0.1
 
 # linear_multiplier_for_river_bed_resistance: 0.1 , 1.0 , 10.0
-linear_multiplier_for_river_bed_resistance = 
-
-
-#~ (pcrglobwb_python3) edwinbar@fcn47.local.snellius.surf.nl:/scratch-shared/edwinbar/recession_coefficient_version_2024-10-01/using_hand_threshold_5m/30sec_FIRST-TRY$ ls -lah *v20241001.map
-#~ -rw-r--r-- 1 edwinbar edwinbar 890M Oct  1 16:15 carbonate_class_v20241001.map
-#~ -rw-r--r-- 1 edwinbar edwinbar 890M Oct  1 16:20 consolidated_class_v20241001.map
-#~ -rw-r--r-- 1 edwinbar edwinbar 3.5G Oct  1 15:23 globalbcat_meter_30sec_v20241001.map
-#~ -rw-r--r-- 1 edwinbar edwinbar 3.5G Oct  1 15:23 k_conductivity_aquifer_30sec_v20241001.map
-#~ -rw-r--r-- 1 edwinbar edwinbar 3.5G Oct  1 16:01 lithological_map_filled_v20241001.map
-#~ -rw-r--r-- 1 edwinbar edwinbar 3.5G Oct  1 15:23 recession_coefficient_30sec_filled_v20241001.map
-#~ -rw-r--r-- 1 edwinbar edwinbar 3.5G Oct  1 15:24 specific_yield_aquifer_30sec_v20241001.map
-#~ -rw-r--r-- 1 edwinbar edwinbar 890M Oct  1 16:14 unconsolidated_class_v20241001.map
+linear_multiplier_for_river_bed_resistance = 10.
 
 
 [groundwaterOptions]
@@ -74,9 +63,10 @@ debugWaterBalance = True
 
 # - ulysses/arise groundwater properties
 groundwaterPropertiesNC = None
-specificYield  = specific_yield_aquifer_30sec_filled_v20231205.map
-kSatAquifer    = k_conductivity_aquifer_30sec_filled_v20231205.map
-recessionCoeff = recession_coefficient_30sec_filled_v20231205.map
+specificYield  = /scratch-shared/edwinbar/recession_coefficient_version_2024-10-01/using_hand_threshold_5m/30sec/specific_yield_aquifer_30sec_v20241001.map
+kSatAquifer    = /scratch-shared/edwinbar/recession_coefficient_version_2024-10-01/using_hand_threshold_5m/30sec/k_conductivity_aquifer_30sec_v20241001.map
+recessionCoeff = /scratch-shared/edwinbar/recession_coefficient_version_2024-10-01/using_hand_threshold_5m/30sec/recession_coefficient_30sec_filled_v20241001.map
+
 
 # - minimum value for groundwater recession coefficient (day-1)
 minRecessionCoeff = 0.00025
@@ -113,7 +103,7 @@ estimate_of_cell_horizontal_size_in_meter = None
 estimate_of_cell_vertical_size_in_meter   = None
 
 
-#~ # activate the following if you do not use MODFLOW 6
+#~ # you may activate the following if you do not use MODFLOW 6
 #~ using_varying_DELR_DELC = True
 #~ estimate_of_cell_horizontal_size_in_meter = horizontal_size_avg_correct_lat.nc
 #~ estimate_of_cell_vertical_size_in_meter   = vertical_size_correct_lat.nc
@@ -135,7 +125,7 @@ confiningLayerThickness                   = confining_layer_thickness_version_20
 # - TODO: Improve this with SoilGrids.
 #
 # - confining layer horizontal conductivity (m/day)
-# -- based on the fine grained unconsolidated of GLHYMPS (de Graaf et al, 2017 used 0.008 m/day)
+# -- based on the fine grained unconsolidated of GLHYMPS, Edwin's calculation (de Graaf et al, 2017 used 0.008 m/day)
 confiningLayerHorizontalConductivity      = 0.008476
 #~ confiningLayerHorizontalConductivity   = Default
 #~ # * If Default (or not defined), the default values from the field of "groundwaterPropertiesNC" of the section "groundwaterOptions" will be used.
@@ -186,7 +176,7 @@ minimumTransmissivity = 10.0
 maximumTransmissivity = 100000.0
 
 # elevation/topographical parameters, e.g. average DEM and minimum DEM within a cell
-topographyNC   = topography_parameters_30sec_february_2021_global_covered_with_zero.nc
+topographyNC   = topography_30sec_03sec/topography_parameters_30sec_february_2021_global_covered_with_zero.nc
 
 # channel/routing parameters (these input values/files would be used to convert discharge to surface water elevation, based on Manning's equation)
 channelNC      = channel_parameters_30sec_february_2021_global_covered_with_zero.nc
@@ -217,10 +207,25 @@ ignoreCapRise = True
 doNotExtrapolateParameters = True
 
 # some parameters for the PCG solver (not used for GLOBGM!)
-DAMP                 = 0.75
+DAMP   = 0.75
 # - for steady-state model, please do not use too many RCLOSE
 RCLOSE = 1e4,1e5,1e9
 HCLOSE = 0.001,0.01,0.1,0.2,0.5,1.0
+
+
+
+# elevation files used in determining drain elevations based on saturated area fraction
+#
+# - using 30 arcsec version of DEM
+minimumElevationForSatAreaFrac        = topography_30sec_03sec/dem_minimum_topography_parameters_30sec_february_2021_global_covered_with_zero.nc
+relativeElevationFilesForSatAreaFrac  = topography_30sec_03sec/dzRel%04d_topography_parameters_30sec_february_2021_global_covered_with_zero.nc
+relativeElevationLevelsForSatAreaFrac = 0.0, 0.01, 0.05, 0.10, 0.20, 0.30, 0.40, 0.50, 0.60, 0.70, 0.80, 0.90, 1.00
+#
+#~ # - using 5 arcmin version of DEM (old idea: the idea is that we downscaled 5arcmin satareafrac to 30sec)
+#~ minimumElevationForSatAreaFrac        = topography_05min_30sec/dem_minimum_topography_parameters_5min_april_2021_global_covered_with_zero.nc
+#~ relativeElevationFilesForSatAreaFrac  = topography_05min_30sec/dzRel%04d_topography_parameters_5min_april_2021_global_covered_with_zero.nc
+#~ relativeElevationLevelsForSatAreaFrac = 0.0, 0.01, 0.05, 0.10, 0.20, 0.30, 0.40, 0.50, 0.60, 0.70, 0.80, 0.90, 1.00
+
 
 #~ # option to use modflow 6 or not
 #~ using_modflow6 = True
@@ -254,25 +259,13 @@ usingPredefinedInitialHead = False
 
 
 # - satAreaFrac input, this is required for estimating drain elevation (surface water height)
-#~ satAreaFracInputNC                = /scratch/depfg/otoo0001/test_australia_w5e5/netcdf/satAreaFrac_monthAvg_output.nc
-# - additional input files that are also required
-# --- files for relative elevation (above minimum dem) - NOTE that this should be at the SAME RESOLUTION AS satAreaFracInputNC
-relativeElevationFiles  = topography_05min_30sec/dzRel%04d_topography_parameters_5min_april_2021_global_covered_with_zero.nc
-relativeElevationLevels = 0.0, 0.01, 0.05, 0.10, 0.20, 0.30, 0.40, 0.50, 0.60, 0.70, 0.80, 0.90, 1.00
-minimumDEM              = topography_05min_30sec/dem_minimum_topography_parameters_5min_april_2021_global_covered_with_zero.nc
-# URGENT TODO: Please check whether it makes more sense to use 
-# TODO: Move these ones to another Options.
-#######################################################################################################################################################
+satAreaFracInputNC = None
 
 
 [modflowSteadyStateInputOptions]
 
 
-avgDischargeInputMap              = 0.0
-avgRunoffInputMap                 = None
-avgGroundwaterRechargeInputMap    = 0.0
-avgGroundwaterAbstractionInputMap = 0.0
-avgChannelStorageInputMap         = None
+estimateDischargeFromRunoff = False
 
 
 #~ # The following input maps used for the steady state run
@@ -286,13 +279,30 @@ avgChannelStorageInputMap         = None
 #~ avgGroundwaterAbstractionInputMap = 0.0
 #~ # - average channel storage (unit: m3) - optional
 #~ avgChannelStorageInputMap         = None
-
-
-
 #~ # saturated area fraction map
 #~ satAreaFracInputMap = estimateSatAreaFrac_time_avg.map
 
-# estimateDischargeFromRunoff = True
+
+#~ (pcrglobwb_python3) edwinbar@fcn47.local.snellius.surf.nl:/scratch-shared/bvjaarsv/globgm_forcing$ ls -lah
+#~ total 7.0G
+#~ drwxrwxrwx 2 bvjaarsv bvjaarsv 4.0K Oct  3 12:14 .
+#~ drwxr-xr-x 7 bvjaarsv bvjaarsv 4.0K Oct  3 15:46 ..
+#~ -rwxrwxrwx 1 bvjaarsv bvjaarsv 3.5G Oct  3 12:15 average_discharge_m3_per_second.nc
+#~ -rwxrwxrwx 1 bvjaarsv bvjaarsv 3.5G Oct  3 12:13 estimateSatAreaFrac_time_avg.map
+
+# dummy test
+avgDischargeInputMap              = /scratch-shared/edwinbar/dummy_globgm_forcing/average_discharge_m3_per_second.nc
+avgRunoffInputMap                 = None
+avgGroundwaterRechargeInputMap    = /scratch-shared/edwinbar/dummy_globgm_forcing/average_gwRecharge_m_per_day_1960_to_2010_without_time_correct_lat.nc
+avgGroundwaterAbstractionInputMap = 0.0
+avgChannelStorageInputMap         = None
+satAreaFracInputMap               = /scratch-shared/edwinbar/dummy_globgm_forcing/estimateSatAreaFrac_time_avg.map
+
+
+#~ # use correction factor downscaling approach
+#~ gwRechargeDownscale = False
+#~ gwRechargeDownscaleFactor = IN_DIR/cf_fractional.zarr
+
 
 # initial estimate for groundwater head (unit: m)
 usingInitialHeadEstimate = False
@@ -313,9 +323,6 @@ extraSpinUpYearsWith365DayStressPeriod = 0
 extraSpinUpYearsWith30DayStressPeriod  = 0
 
 
-#~ # use correction factor downscaling approach
-#~ gwRechargeDownscale = False
-#~ gwRechargeDownscaleFactor = IN_DIR/cf_fractional.zarr
 
 
 
