prepare the version that can be used by Barry

--- a/run_globgm/model_tools_src/python/pcr-globwb/ini_files_2024-10-XX/steady-state_config_edwin_v20241004.ini
+++ b/run_globgm/model_tools_src/python/pcr-globwb/ini_files_2024-10-XX/steady-state_config_edwin_v20241004.ini
@@ -227,7 +227,7 @@ relativeElevationLevelsForSatAreaFrac = 0.0, 0.01, 0.05, 0.10, 0.20, 0.30, 0.40,
 #~ relativeElevationLevelsForSatAreaFrac = 0.0, 0.01, 0.05, 0.10, 0.20, 0.30, 0.40, 0.50, 0.60, 0.70, 0.80, 0.90, 1.00
 
 
-#~ # option to use modflow 6 or not
+#~ # option to use modflow 6 or not - TODO: Barry will have to activate this!!
 #~ using_modflow6 = True
 
 
@@ -283,14 +283,7 @@ estimateDischargeFromRunoff = False
 #~ satAreaFracInputMap = estimateSatAreaFrac_time_avg.map
 
 
-#~ (pcrglobwb_python3) edwinbar@fcn47.local.snellius.surf.nl:/scratch-shared/bvjaarsv/globgm_forcing$ ls -lah
-#~ total 7.0G
-#~ drwxrwxrwx 2 bvjaarsv bvjaarsv 4.0K Oct  3 12:14 .
-#~ drwxr-xr-x 7 bvjaarsv bvjaarsv 4.0K Oct  3 15:46 ..
-#~ -rwxrwxrwx 1 bvjaarsv bvjaarsv 3.5G Oct  3 12:15 average_discharge_m3_per_second.nc
-#~ -rwxrwxrwx 1 bvjaarsv bvjaarsv 3.5G Oct  3 12:13 estimateSatAreaFrac_time_avg.map
-
-# dummy test
+# dummy test - TODO: Replace this with the correct one!
 avgDischargeInputMap              = /scratch-shared/edwinbar/dummy_globgm_forcing/average_discharge_m3_per_second.nc
 avgRunoffInputMap                 = None
 avgGroundwaterRechargeInputMap    = /scratch-shared/edwinbar/dummy_globgm_forcing/average_gwRecharge_m_per_day_1960_to_2010_without_time_correct_lat.nc
@@ -299,7 +292,7 @@ avgChannelStorageInputMap         = None
 satAreaFracInputMap               = /scratch-shared/edwinbar/dummy_globgm_forcing/estimateSatAreaFrac_monthAvg_1960-01-31_to_2019-12-31_avg_30sec.map
 
 
-#~ # use correction factor downscaling approach
+#~ # use correction factor downscaling approach - TODO: Barry will activate this!!
 #~ gwRechargeDownscale = False
 #~ gwRechargeDownscaleFactor = IN_DIR/cf_fractional.zarr
 
