--- a/run_globgm/model_tools_src/python/pcr-globwb/ini_files_2024-10-XX/steady-state_config_edwin_vdevelop.ini
+++ b/run_globgm/model_tools_src/python/pcr-globwb/ini_files_2024-10-XX/steady-state_config_edwin_vdevelop.ini
@@ -1,29 +1,61 @@
 [globalOptions]
 
 # Set the pcrglobwb output directory in an absolute path.
-outputDir = {globgm_dir}/map_input/steady-state/$tile$/
+#~ outputDir = OUT_DIR/$tile$/
+outputDir    = /scratch-shared/edwinbar/test_globgm/java/
+
 
 # Set the input directory map in an absolute path.
-inputDir    = {yoda_input}
+#~ inputDir  = IN_DIR
+inputDir     = /scratch-shared/edwinbar/globgm_input/develop/
+
 
 # Map of clone (must be provided in PCRaster maps)
 # - Spatial resolution and coverage are based on this map:
-cloneMap = {yoda_input}/clonemap_15deg/map/$tile$.map
+#~ cloneMap  = IN_DIR/clonemap_tiles/map/$tile$.map
+cloneMap     = Java30sec.clone.map
 
 # The area/landmask of interest:
 # If None, area/landmask is limited for cells with ldd value.
 landmask    = None
 
-# netcdf attributes for output files:
-institution = Department of Physical Geography, Utrecht University
-title       = PCR-GLOBWB-MODFLOW offline coupling
-description = by Edwin H. Sutanudjaja (contact: globgm.info@gmail.com)
 
-startTime = 1958-01-01
-endTime   = 2015-12-31
+# netcdf attributes for output files:
+institution    = Department of Physical Geography, Utrecht University
+title          = GLOBGM, PCR-GLOBWB-MODFLOW offline coupling
+#~ description = by Barry van Jaarsveld (contact: a.s.vanjaarsveld@uu.nl)
+description    = test version by Edwin
+
+
+startTime = 1960-01-01
+endTime   = 1960-12-31
 # Format: YYYY-MM-DD ; The model runs on daily time step.
 
 modflowOfflineCoupling = True
+
+
+[prefactorOptions]
+
+
+
+# linear_multiplier_for_kh_unconsolidated: 0.1 , 1.0 , 10.0
+linear_multiplier_for_kh_unconsolidated    = 0.1
+boolean_in_scalar_map_of_unconsolidated    = /scratch-shared/edwinbar/recession_coefficient_version_2024-10-01/using_hand_threshold_5m/30sec/unconsolidated_class_v20241001.map
+
+# linear_multiplier_for_kh_consolidated: 0.1 , 1.0 , 10.0
+linear_multiplier_for_kh_consolidated      = 0.1
+boolean_in_scalar_map_of_consolidated      = /scratch-shared/edwinbar/recession_coefficient_version_2024-10-01/using_hand_threshold_5m/30sec/consolidated_class_v20241001.map
+
+# linear_multiplier_for_kh_carbonate: 0.1 , 1.0 , 10.0
+linear_multiplier_for_kh_carbonate         = 10.0
+boolean_in_scalar_map_of_carbonate         = /scratch-shared/edwinbar/recession_coefficient_version_2024-10-01/using_hand_threshold_5m/30sec/carbonate_class_v20241001.map
+
+# linear_multiplier_for_kv_confining_layer: 0.1 , 1.0
+linear_multiplier_for_kv_confining_layer   = 10.
+
+# linear_multiplier_for_river_bed_resistance: 0.1 , 1.0 , 10.0
+linear_multiplier_for_river_bed_resistance = 0.1
+
 
 [groundwaterOptions]
 
@@ -31,9 +63,10 @@ debugWaterBalance = True
 
 # - ulysses/arise groundwater properties
 groundwaterPropertiesNC = None
-specificYield  = specific_yield_aquifer_filled_30sec.nc
-kSatAquifer    = k_conductivity_aquifer_filled_30sec.nc
-recessionCoeff = recession_coefficient_30sec.nc
+specificYield  = /scratch-shared/edwinbar/recession_coefficient_version_2024-10-01/using_hand_threshold_5m/30sec/specific_yield_aquifer_30sec_v20241001.map
+kSatAquifer    = /scratch-shared/edwinbar/recession_coefficient_version_2024-10-01/using_hand_threshold_5m/30sec/k_conductivity_aquifer_30sec_v20241001.map
+recessionCoeff = /scratch-shared/edwinbar/recession_coefficient_version_2024-10-01/using_hand_threshold_5m/30sec/recession_coefficient_30sec_filled_v20241001.map
+
 
 # - minimum value for groundwater recession coefficient (day-1)
 minRecessionCoeff = 0.00025
@@ -53,6 +86,7 @@ estimateOfTotalGroundwaterThickness    = thickness_05min_remapbil_to_30sec_fille
 minimumTotalGroundwaterThickness       = 50.
 maximumTotalGroundwaterThickness       = 1000.
 
+
 # assumption for the minimum transmissivity value (unit: m2/day) that can be extracted (via capillary rise and/or groundwater abstraction) - optional
 # - if None, abstraction and/or capillary rise can always occur everywhere and unlimited
 minimumTransmissivityForProductiveAquifer = 50.
@@ -60,15 +94,24 @@ minimumTransmissivityForProductiveAquifer = 50.
 
 doNotExtrapolateThickness = True
 
+
 [modflowParameterOptions]
 
-# using varying DELR and DELC in order to correct horizontal anisotrophy of lat/lon cells (experimental)
+# using varying DELR and DELC in order to correct horizontal anisotrophy of lat/lon cells - not needed for MODFLOW 6
 using_varying_DELR_DELC = False
-estimate_of_cell_horizontal_size_in_meter = horizontal_size_avg_correct_lat.nc
-estimate_of_cell_vertical_size_in_meter   = vertical_size_correct_lat.nc
+estimate_of_cell_horizontal_size_in_meter = None
+estimate_of_cell_vertical_size_in_meter   = None
+
+
+#~ # you may activate the following if you do not use MODFLOW 6
+#~ using_varying_DELR_DELC = True
+#~ estimate_of_cell_horizontal_size_in_meter = horizontal_size_avg_correct_lat.nc
+#~ estimate_of_cell_vertical_size_in_meter   = vertical_size_correct_lat.nc
+
 
 # number of modflow layers:
 number_of_layers = 2
+
 
 # Total thickness of groundwater (from both layers) is defined in the section "groundwaterOptions".
 
@@ -82,15 +125,20 @@ confiningLayerThickness                   = confining_layer_thickness_version_20
 # - TODO: Improve this with SoilGrids.
 #
 # - confining layer horizontal conductivity (m/day)
-confiningLayerHorizontalConductivity      = Default
-# * If Default (or not defined), the default values from the field of "groundwaterPropertiesNC" of the section "groundwaterOptions" will be used.
+# -- based on the fine grained unconsolidated of GLHYMPS, Edwin's calculation (de Graaf et al, 2017 used 0.008 m/day)
+confiningLayerHorizontalConductivity      = 0.008476
+#~ confiningLayerHorizontalConductivity   = Default
+#~ # * If Default (or not defined), the default values from the field of "groundwaterPropertiesNC" of the section "groundwaterOptions" will be used.
+
 #
 # - confining layer vertical conductivity (m/day)
-confiningLayerVerticalConductivity        = Default
-# * If Default (or not defined), the default values from the field of "groundwaterPropertiesNC" of the section "groundwaterOptions" will be used.
+confiningLayerVerticalConductivity        = 0.008476
+#~ confiningLayerVerticalConductivity     = Default
+#~ # * If Default (or not defined), the default values from the field of "groundwaterPropertiesNC" of the section "groundwaterOptions" will be used.
 # - maximum confining layer conductivity
-maximumConfiningLayerVerticalConductivity = 0.005
-# * PS: 0.005 used in WRI groundwater risk runs
+maximumConfiningLayerVerticalConductivity = 0.008476
+#~ maximumConfiningLayerVerticalConductivity = 0.005
+#~ # * PS: 0.005 used in WRI groundwater risk runs
 #
 # - resistance (day)
 # * By default, the resistance (1/VCONT) between two layers equals to confiningLayerThickness (m) / confiningLayerVerticalConductivity (m.day-1)
@@ -128,7 +176,7 @@ minimumTransmissivity = 10.0
 maximumTransmissivity = 100000.0
 
 # elevation/topographical parameters, e.g. average DEM and minimum DEM within a cell
-topographyNC   = topography_parameters_30sec_february_2021_global_covered_with_zero.nc
+topographyNC   = topography_30sec_03sec/topography_parameters_30sec_february_2021_global_covered_with_zero.nc
 
 # channel/routing parameters (these input values/files would be used to convert discharge to surface water elevation, based on Manning's equation)
 channelNC      = channel_parameters_30sec_february_2021_global_covered_with_zero.nc
@@ -159,43 +207,101 @@ ignoreCapRise = True
 doNotExtrapolateParameters = True
 
 # some parameters for the PCG solver (not used for GLOBGM!)
-DAMP                 = 0.75
+DAMP   = 0.75
 # - for steady-state model, please do not use too many RCLOSE
 RCLOSE = 1e4,1e5,1e9
 HCLOSE = 0.001,0.01,0.1,0.2,0.5,1.0
 
 
 
-# option to use multiple drains
-multiple_drains = True
+# elevation files used in determining drain elevations based on saturated area fraction
+#
+# - using 30 arcsec version of DEM
+minimumElevationForSatAreaFrac        = topography_30sec_03sec/dem_minimum_topography_parameters_30sec_february_2021_global_covered_with_zero.nc
+relativeElevationFilesForSatAreaFrac  = topography_30sec_03sec/dzRel%04d_topography_parameters_30sec_february_2021_global_covered_with_zero.nc
+relativeElevationLevelsForSatAreaFrac = 0.0, 0.01, 0.05, 0.10, 0.20, 0.30, 0.40, 0.50, 0.60, 0.70, 0.80, 0.90, 1.00
+#
+#~ # - using 5 arcmin version of DEM (old idea: the idea is that we downscaled 5arcmin satareafrac to 30sec)
+#~ minimumElevationForSatAreaFrac        = topography_05min_30sec/dem_minimum_topography_parameters_5min_april_2021_global_covered_with_zero.nc
+#~ relativeElevationFilesForSatAreaFrac  = topography_05min_30sec/dzRel%04d_topography_parameters_5min_april_2021_global_covered_with_zero.nc
+#~ relativeElevationLevelsForSatAreaFrac = 0.0, 0.01, 0.05, 0.10, 0.20, 0.30, 0.40, 0.50, 0.60, 0.70, 0.80, 0.90, 1.00
 
-# files for relative elevation values (above minimum dem) 
-#~ relativeElevationLevels = 0.0, 0.10, 0.20, 0.30, 0.40, 0.50, 0.70, 1.00
-relativeElevationLevels    = 0.0, 0.01, 0.05, 0.10, 0.20, 0.30, 0.40, 0.50, 0.60, 0.70, 0.80, 0.90, 1.00
-relativeElevationFiles     = global_30sec/landSurface/topography/merit_dem_processed/version_2021-02-XX/maps_covered_with_zero/dzRel%04d_topography_parameters_30sec_february_2021_global_covered_with_zero.map
+
+#~ # option to use modflow 6 or not - TODO: Barry will have to activate this!!
+#~ using_modflow6 = True
 
 
-#######################################################################################################################################################
+[modflowTransientInputOptions]
+
+# the following is None for an online coupling between PCR-GLOBWB and MODFLOW
+#
+# - global extent
+dischargeInputNC               = None
+runoffInputNC                  = None
+groundwaterRechargeInputNC     = None
+groundwaterAbstractionInputNC  = None
+channelStorageInputNC          = None
+#
+
+valuesRechargeAndAbstractionInMonthlyTotal = True
+
+estimateDischargeFromRunoff = True
+valuesRunoffInMonthlyTotal  = True
+
+# initial conditions for groundwater head (unit: m)
+groundwaterHeadLayer1Ini = None
+groundwaterHeadLayer2Ini = None
+
+usingPredefinedInitialHead = False
+# - if False, the initial groundwater head(s) will be based on the steady state simulation using the input defined in modflowSteadyStateInputOptions
+# - if True , the following initial conditions of the groundwater head will be based on the steady state simulation using the input defined in modflowSteadyStateInputOptions
+# - Note: For the online coupling PCR-GLOBWB-MODFLOW, we have to first define the initial conditions of groundwater head (usingPredefinedInitialHead = True)
+
+
+# - satAreaFrac input, this is required for estimating drain elevation (surface water height)
+satAreaFracInputNC = None
+
+
 [modflowSteadyStateInputOptions]
 
-# The following input maps used for the steady state run
-# - average discharge (unit: m3/s)
-avgDischargeInputMap              = average_discharge_m3_per_second_1960_2010_correct_lat.nc
-# - average runoff (unit: m/day)
-avgRunoffInputMap                 = None
-# - average groundwater recharge (unit: m/day)
-avgGroundwaterRechargeInputMap    = average_gwRecharge_m_per_day_1960_to_2010_without_time_correct_lat.nc
-# - average groundwater abstraction (unit: m/day)
-avgGroundwaterAbstractionInputMap = 0.0
-# - average channel storage (unit: m3) - optional
-avgChannelStorageInputMap         = None
 
-# estimateDischargeFromRunoff = True
+estimateDischargeFromRunoff = False
+
+
+#~ # The following input maps used for the steady state run
+#~ # - average discharge (unit: m3/s)
+#~ avgDischargeInputMap              = FORCING_DIR/average_discharge_m3_per_second.nc
+#~ # - average runoff (unit: m/day)
+#~ avgRunoffInputMap                 = None
+#~ # - average groundwater recharge (unit: m/day)
+#~ avgGroundwaterRechargeInputMap    = FORCING_DIR/average_gwRecharge_m_per_day.nc
+#~ # - average groundwater abstraction (unit: m/day)
+#~ avgGroundwaterAbstractionInputMap = 0.0
+#~ # - average channel storage (unit: m3) - optional
+#~ avgChannelStorageInputMap         = None
+#~ # saturated area fraction map
+#~ satAreaFracInputMap = estimateSatAreaFrac_time_avg.map
+
+
+# dummy test - TODO: Replace this with the correct one!
+avgDischargeInputMap              = /scratch-shared/edwinbar/dummy_globgm_forcing/average_discharge_m3_per_second.nc
+avgRunoffInputMap                 = None
+avgGroundwaterRechargeInputMap    = /scratch-shared/edwinbar/dummy_globgm_forcing/average_gwRecharge_m_per_day_1960_to_2010_without_time_correct_lat.nc
+avgGroundwaterAbstractionInputMap = 0.0
+avgChannelStorageInputMap         = None
+satAreaFracInputMap               = /scratch-shared/edwinbar/dummy_globgm_forcing/estimateSatAreaFrac_monthAvg_1960-01-31_to_2019-12-31_avg_30sec.map
+
+
+#~ # use correction factor downscaling approach - TODO: Barry will activate this!!
+#~ gwRechargeDownscale = False
+#~ gwRechargeDownscaleFactor = IN_DIR/cf_fractional.zarr
+
 
 # initial estimate for groundwater head (unit: m)
 usingInitialHeadEstimate = False
 groundwaterHeadLayer1Estimate = None
 groundwaterHeadLayer2Estimate = None
+
 
 # option to ignore negative capillary rise during a steady state simulation
 ignoreCapRiseSteadyState = True
@@ -208,6 +314,9 @@ extraSpinUpYearsWith365DayStressPeriod = 0
 
 # option to introduce extra spin-up years (using transient simulation with constant input with 30 day stress period)
 extraSpinUpYearsWith30DayStressPeriod  = 0
+
+
+
 
 
 [reportingForModflowOptions]
