update workflowe and add cmd options for prefactor

--- a/run_globgm/model_input/2_partition_and_write_model_input/steady-state/tile_156-163.ini
+++ b/run_globgm/model_input/2_partition_and_write_model_input/steady-state/tile_156-163.ini
@@ -1,14 +1,14 @@
 [globalOptions]
 
 # Set the pcrglobwb output directory in an absolute path.
-outputDir = OUT_DIR/$tile$/
+outputDir = /scratch-shared/bvjaarsv/settingsTest/yes_downscale/tile_156-163/
 
 # Set the input directory map in an absolute path.
-inputDir    = IN_DIR
+inputDir    = /projects/0/einf4705/_data/globgm_input
 
 # Map of clone (must be provided in PCRaster maps)
 # - Spatial resolution and coverage are based on this map:
-cloneMap = IN_DIR/clonemap_tiles/map/$tile$.map
+cloneMap = /projects/0/einf4705/_data/globgm_input/clonemap_tiles/map/tile_156-163.map
 
 
 # The area/landmask of interest:
@@ -29,22 +29,22 @@ modflowOfflineCoupling = True
 
 [prefactorOptions]
 # linear_multiplier_for_kh_unconsolidated: 0.1 , 1.0 , 10.0
-linear_multiplier_for_kh_unconsolidated    = KH_UNCON_PF
+linear_multiplier_for_kh_unconsolidated    = 0.1
 boolean_in_scalar_map_of_unconsolidated    = unconsolidated_class_v20241001.nc
 
 ; # linear_multiplier_for_kh_consolidated: 0.1 , 1.0 , 10.0
-linear_multiplier_for_kh_consolidated      = KH_CON_PF
+linear_multiplier_for_kh_consolidated      = 0.1
 boolean_in_scalar_map_of_consolidated      = consolidated_class_v20241001.nc
 
 ; # linear_multiplier_for_kh_carbonate: 0.1 , 1.0 , 10.0
-linear_multiplier_for_kh_carbonate         = KH_CAR_PF
+linear_multiplier_for_kh_carbonate         = 0.1
 boolean_in_scalar_map_of_carbonate         = carbonate_class_v20241001.nc
 
 ; # linear_multiplier_for_kv_confining_layer: 0.1 , 1.0
-linear_multiplier_for_kv_confining_layer   = KV_CON_PF
+linear_multiplier_for_kv_confining_layer   = 0.1
 
 ; # linear_multiplier_for_river_bed_resistance: 0.1 , 1.0 , 10.0
-linear_multiplier_for_river_bed_resistance = RIV_RES_PF
+linear_multiplier_for_river_bed_resistance = 0.1
 
 
 [groundwaterOptions]
@@ -237,18 +237,18 @@ estimateDischargeFromRunoff = False
 
 # The following input maps used for the steady state run
 # - average discharge (unit: m3/s)
-avgDischargeInputMap              = FORCING_DIR/average_discharge_m3_per_second.nc
+avgDischargeInputMap              = /scratch-shared/bvjaarsv/inputTest/forcing_input/average_discharge_m3_per_second.nc
 # - average runoff (unit: m/day)
 avgRunoffInputMap                 = None
 # - average groundwater recharge (unit: m/day)
-avgGroundwaterRechargeInputMap    = FORCING_DIR/average_gwRecharge_m_per_day.nc
+avgGroundwaterRechargeInputMap    = /scratch-shared/bvjaarsv/inputTest/forcing_input/average_gwRecharge_m_per_day.nc
 # - average groundwater abstraction (unit: m/day)
 avgGroundwaterAbstractionInputMap = 0.0
 # - average channel storage (unit: m3) - optional
 avgChannelStorageInputMap         = None
 
 # saturated area fraction map
-satAreaFracInputMap = FORCING_DIR/sat_area_fraction_average.nc
+satAreaFracInputMap = /scratch-shared/bvjaarsv/inputTest/forcing_input/sat_area_fraction_average.nc
 
 # initial estimate for groundwater head (unit: m)
 usingInitialHeadEstimate = False
@@ -269,7 +269,7 @@ extraSpinUpYearsWith30DayStressPeriod  = 0
 
 #Use correction factor downscaling approach
 gwRechargeDownscale = True
-gwRechargeDownscaleFactor = FORCING_DIR/gwRecharge_correction_factor.zarr
+gwRechargeDownscaleFactor = /scratch-shared/bvjaarsv/inputTest/forcing_input/gwRecharge_correction_factor.zarr
 
 [reportingForModflowOptions]
 
