--- a/run_globgm/model_input/2_partition_and_write_model_input/steady-state/steady-state_config_orig.ini
+++ b/run_globgm/model_input/2_partition_and_write_model_input/steady-state/steady-state_config_orig.ini
@@ -29,22 +29,22 @@ modflowOfflineCoupling = True
 
 [prefactorOptions]
 # linear_multiplier_for_kh_unconsolidated: 0.1 , 1.0 , 10.0
-linear_multiplier_for_kh_unconsolidated    = KH_UNCON_PF
+linear_multiplier_for_kh_unconsolidated    = 1.0
 boolean_in_scalar_map_of_unconsolidated    = unconsolidated_class_v20241001.nc
 
 ; # linear_multiplier_for_kh_consolidated: 0.1 , 1.0 , 10.0
-linear_multiplier_for_kh_consolidated      = KH_CON_PF
+linear_multiplier_for_kh_consolidated      = 1.0
 boolean_in_scalar_map_of_consolidated      = consolidated_class_v20241001.nc
 
 ; # linear_multiplier_for_kh_carbonate: 0.1 , 1.0 , 10.0
-linear_multiplier_for_kh_carbonate         = KH_CAR_PF
+linear_multiplier_for_kh_carbonate         = 1.0
 boolean_in_scalar_map_of_carbonate         = carbonate_class_v20241001.nc
 
 ; # linear_multiplier_for_kv_confining_layer: 0.1 , 1.0
-linear_multiplier_for_kv_confining_layer   = KV_CON_PF
+linear_multiplier_for_kv_confining_layer   = 1.0
 
 ; # linear_multiplier_for_river_bed_resistance: 0.1 , 1.0 , 10.0
-linear_multiplier_for_river_bed_resistance = RIV_RES_PF
+linear_multiplier_for_river_bed_resistance = 1.0
 
 
 [groundwaterOptions]
