--- a/run_globgm/model_input/2_partition_and_write_model_input/transient/transient_config.ini
+++ b/run_globgm/model_input/2_partition_and_write_model_input/transient/transient_config.ini
@@ -1,10 +1,5 @@
 [globalOptions]
 
-; [model_setup]
-; clone_file = /projects/0/einf4705/workflow/GLOBGM/run_globgm/_data/globgm_input/global_30sec_clone.map
-; ldd_file = /projects/0/einf4705/workflow/GLOBGM/run_globgm/_data/globgm_input/lddsound_30sec_version_202005XX_correct_lat.nc
-; cell_area_file=/projects/0/einf4705/workflow/GLOBGM/run_globgm/_data/globgm_input/cdo_grid_area_30sec_map_correct_lat.nc
-; lake_and_reservoir_file=/projects/0/einf4705/workflow/GLOBGM/run_globgm/_data/globgm_input/lakes_and_reservoirs_30sec_global_2019_version_202005XX.nc
 # Set the pcrglobwb output directory in an absolute path.
 outputDir = OUT_DIR/$tile$
 
@@ -30,15 +25,36 @@ endTime   = END_DATE
 
 modflowOfflineCoupling = True
 
+
+[prefactorOptions]
+# linear_multiplier_for_kh_unconsolidated: 0.1 , 1.0 , 10.0
+linear_multiplier_for_kh_unconsolidated    = 1.0
+boolean_in_scalar_map_of_unconsolidated    = unconsolidated_class_v20241001.nc
+
+; # linear_multiplier_for_kh_consolidated: 0.1 , 1.0 , 10.0
+linear_multiplier_for_kh_consolidated      = 1.0
+boolean_in_scalar_map_of_consolidated      = consolidated_class_v20241001.nc
+
+; # linear_multiplier_for_kh_carbonate: 0.1 , 1.0 , 10.0
+linear_multiplier_for_kh_carbonate         = 1.0
+boolean_in_scalar_map_of_carbonate         = carbonate_class_v20241001.nc
+
+; # linear_multiplier_for_kv_confining_layer: 0.1 , 1.0
+linear_multiplier_for_kv_confining_layer   = 1.0
+
+; # linear_multiplier_for_river_bed_resistance: 0.1 , 1.0 , 10.0
+linear_multiplier_for_river_bed_resistance = 1.0
+
+
 [groundwaterOptions]
 
 debugWaterBalance = True
 
 # - ulysses/arise groundwater properties
 groundwaterPropertiesNC = None
-specificYield  = specific_yield_aquifer_30sec_filled_v20231205.nc
-kSatAquifer    = k_conductivity_aquifer_30sec_filled_v20231205.nc
-recessionCoeff = recession_coefficient_30sec_filled_v20231205.nc
+specificYield  = specific_yield_aquifer_30sec_v20241001.nc
+kSatAquifer    = k_conductivity_aquifer_30sec_v20241001.nc
+recessionCoeff = recession_coefficient_30sec_filled_v20241001.nc
 
 # - minimum value for groundwater recession coefficient (day-1)
 minRecessionCoeff = 0.00025
@@ -87,15 +103,17 @@ confiningLayerThickness                   = confining_layer_thickness_version_20
 # - TODO: Improve this with SoilGrids.
 #
 # - confining layer horizontal conductivity (m/day)
-confiningLayerHorizontalConductivity      = Default
-# * If Default (or not defined), the default values from the field of "groundwaterPropertiesNC" of the section "groundwaterOptions" will be used.
+# -- based on the fine grained unconsolidated of GLHYMPS, Edwin's calculation (de Graaf et al, 2017 used 0.008 m/day)
+confiningLayerHorizontalConductivity      = 0.008476
+#~ # * If Default (or not defined), the default values from the field of "groundwaterPropertiesNC" of the section "groundwaterOptions" will be used.
+
 #
 # - confining layer vertical conductivity (m/day)
-confiningLayerVerticalConductivity        = Default
-# * If Default (or not defined), the default values from the field of "groundwaterPropertiesNC" of the section "groundwaterOptions" will be used.
+confiningLayerVerticalConductivity        = 0.008476
+#~ # * If Default (or not defined), the default values from the field of "groundwaterPropertiesNC" of the section "groundwaterOptions" will be used.
+
 # - maximum confining layer conductivity
-maximumConfiningLayerVerticalConductivity = 0.005
-# * PS: 0.005 used in WRI groundwater risk runs
+maximumConfiningLayerVerticalConductivity = 0.008476
 #
 # - resistance (day)
 # * By default, the resistance (1/VCONT) between two layers equals to confiningLayerThickness (m) / confiningLayerVerticalConductivity (m.day-1)
@@ -133,7 +151,7 @@ minimumTransmissivity = 10.0
 maximumTransmissivity = 100000.0
 
 # elevation/topographical parameters, e.g. average DEM and minimum DEM within a cell
-topographyNC   = topography_parameters_30sec_february_2021_global_covered_with_zero.nc
+topographyNC   = topography_30sec_03sec/topography_parameters_30sec_february_2021_global_covered_with_zero.nc
 
 # channel/routing parameters (these input values/files would be used to convert discharge to surface water elevation, based on Manning's equation)
 channelNC      = channel_parameters_30sec_february_2021_global_covered_with_zero.nc
@@ -169,16 +187,17 @@ DAMP                 = 0.75
 RCLOSE = 1e4,1e5,1e9
 HCLOSE = 0.001,0.01,0.1,0.2,0.5,1.0
 
-# - satAreaFrac input, this is required for estimating drain elevation (surface water height)
-#~ satAreaFracInputNC                = /scratch/depfg/otoo0001/test_australia_w5e5/netcdf/satAreaFrac_monthAvg_output.nc
-# - additional input files that are also required
-# --- files for relative elevation (above minimum dem) - NOTE that this should be at the SAME RESOLUTION AS satAreaFracInputNC
-relativeElevationFiles  = topography_05min_30sec/dzRel%04d_topography_parameters_5min_april_2021_global_covered_with_zero.nc
-relativeElevationLevels = 0.0, 0.01, 0.05, 0.10, 0.20, 0.30, 0.40, 0.50, 0.60, 0.70, 0.80, 0.90, 1.00
-minimumDEM              = topography_05min_30sec/dem_minimum_topography_parameters_5min_april_2021_global_covered_with_zero.nc
+# elevation files used in determining drain elevations based on saturated area fraction
+#
+# - using 30 arcsec version of DEM
+minimumElevationForSatAreaFrac        = topography_30sec_03sec/dem_minimum_topography_parameters_30sec_february_2021_global_covered_with_zero.nc
+relativeElevationFilesForSatAreaFrac  = topography_30sec_03sec/dzRel%04d_topography_parameters_30sec_february_2021_global_covered_with_zero.nc
+relativeElevationLevelsForSatAreaFrac = 0.0, 0.01, 0.05, 0.10, 0.20, 0.30, 0.40, 0.50, 0.60, 0.70, 0.80, 0.90, 1.00
+
 
 using_modflow6=True
-# TODO: Move these ones to another Options.
+
+
 [modflowTransientInputOptions]
 
 # the following is None for an online coupling between PCR-GLOBWB and MODFLOW
@@ -192,8 +211,8 @@ channelStorageInputNC          = None
 
 valuesRechargeAndAbstractionInMonthlyTotal = True
 
-# estimateDischargeFromRunoff = True
-# valuesRunoffInMonthlyTotal  = True
+# saturated area fraction map
+satAreaFracInputNC = FORCING_DIR/sat_area_fraction_monthly.nc
 
 # initial conditions for groundwater head (unit: m)
 groundwaterHeadLayer1Ini = None
@@ -203,9 +222,8 @@ usingPredefinedInitialHead = False
 # - if False, the initial groundwater head(s) will be based on the steady state simulation using the input defined in modflowSteadyStateInputOptions
 # - if True , the following initial conditions of the groundwater head will be based on the steady state simulation using the input defined in modflowSteadyStateInputOptions
 # - Note: For the online coupling PCR-GLOBWB-MODFLOW, we have to first define the initial conditions of groundwater head (usingPredefinedInitialHead = True)
-
-gwRechargeDownscale = False
-gwRechargeDownscaleFactor = IN_DIR/cf_fractional.zarr
+gwRechargeDownscale = True
+gwRechargeDownscaleFactor = FORCING_DIR/gwRecharge_correction_factor.zarr
 
 #######################################################################################################################################################
 [modflowSteadyStateInputOptions]
@@ -222,7 +240,8 @@ avgGroundwaterAbstractionInputMap = 0.0
 # - average channel storage (unit: m3) - optional
 avgChannelStorageInputMap         = None
 
-# estimateDischargeFromRunoff = True
+# saturated area fraction map
+satAreaFracInputMap = FORCING_DIR/sat_area_fraction_average.nc
 
 # initial estimate for groundwater head (unit: m)
 usingInitialHeadEstimate = False
@@ -241,8 +260,9 @@ extraSpinUpYearsWith365DayStressPeriod = 0
 # option to introduce extra spin-up years (using transient simulation with constant input with 30 day stress period)
 extraSpinUpYearsWith30DayStressPeriod  = 0
 
-gwRechargeDownscale = False
-gwRechargeDownscaleFactor = IN_DIR/cf_fractional.zarr
+#Use correction factor downscaling approach
+gwRechargeDownscale = True
+gwRechargeDownscaleFactor = FORCING_DIR/gwRecharge_correction_factor.zarr
 
 [reportingForModflowOptions]
 
