remove external slurm jobs and consolidate into a single snakemake workflow - for calibration script

--- a/run_simulation/model_input/2_partition_and_write_model_input/transient/transient_config.ini
+++ b/run_simulation/model_input/2_partition_and_write_model_input/transient/transient_config.ini
@@ -28,22 +28,22 @@ modflowOfflineCoupling = True
 
 [prefactorOptions]
 # linear_multiplier_for_kh_unconsolidated: 0.1 , 1.0 , 10.0
-linear_multiplier_for_kh_unconsolidated    = 1.0
+linear_multiplier_for_kh_unconsolidated    = 0.1
 boolean_in_scalar_map_of_unconsolidated    = unconsolidated_class_v20241001.nc
 
 ; # linear_multiplier_for_kh_consolidated: 0.1 , 1.0 , 10.0
-linear_multiplier_for_kh_consolidated      = 1.0
+linear_multiplier_for_kh_consolidated      = 0.1
 boolean_in_scalar_map_of_consolidated      = consolidated_class_v20241001.nc
 
 ; # linear_multiplier_for_kh_carbonate: 0.1 , 1.0 , 10.0
-linear_multiplier_for_kh_carbonate         = 1.0
+linear_multiplier_for_kh_carbonate         = 0.1
 boolean_in_scalar_map_of_carbonate         = carbonate_class_v20241001.nc
 
 ; # linear_multiplier_for_kv_confining_layer: 0.1 , 1.0
-linear_multiplier_for_kv_confining_layer   = 1.0
+linear_multiplier_for_kv_confining_layer   = 0.1
 
 ; # linear_multiplier_for_river_bed_resistance: 0.1 , 1.0 , 10.0
-linear_multiplier_for_river_bed_resistance = 1.0
+linear_multiplier_for_river_bed_resistance = 0.1
 
 
 [groundwaterOptions]
@@ -199,9 +199,6 @@ using_modflow6=True
 
 
 [modflowTransientInputOptions]
-
-initialConditionsRun = True
-
 # the following is None for an online coupling between PCR-GLOBWB and MODFLOW
 #
 # - global extent, with discharge
@@ -214,6 +211,7 @@ channelStorageInputNC          = None
 valuesRechargeAndAbstractionInMonthlyTotal = True
 
 # saturated area fraction map
+useSatAreaFracMapForTransient = True
 satAreaFracInputNC = FORCING_DIR/sat_area_fraction_monthly.nc
 
 # initial conditions for groundwater head (unit: m)
@@ -226,6 +224,7 @@ usingPredefinedInitialHead = False
 # - Note: For the online coupling PCR-GLOBWB-MODFLOW, we have to first define the initial conditions of groundwater head (usingPredefinedInitialHead = True)
 gwRechargeDownscale = True
 gwRechargeDownscaleFactor = FORCING_DIR/gwRecharge_correction_factor.zarr
+precipitationFile = FORCING_DIR/precipitation.nc
 
 #######################################################################################################################################################
 [modflowSteadyStateInputOptions]
@@ -243,6 +242,7 @@ avgGroundwaterAbstractionInputMap = 0.0
 avgChannelStorageInputMap         = None
 
 # saturated area fraction map
+useSatAreaFracMapForSteadyState = True
 satAreaFracInputMap = FORCING_DIR/sat_area_fraction_average.nc
 
 # initial estimate for groundwater head (unit: m)
