--- a/run_initial_conditions/model_input/2_partition_and_write_model_input/steady-state/steady-state_config.ini
+++ b/run_initial_conditions/model_input/2_partition_and_write_model_input/steady-state/steady-state_config.ini
@@ -1,7 +1,7 @@
 [globalOptions]
 
 # Set the pcrglobwb output directory in an absolute path.
-outputDir = OUT_DIR/$tile$/
+outputDir = OUT_DIR/$tile$
 
 # Set the input directory map in an absolute path.
 inputDir    = IN_DIR
@@ -9,7 +9,6 @@ inputDir    = IN_DIR
 # Map of clone (must be provided in PCRaster maps)
 # - Spatial resolution and coverage are based on this map:
 cloneMap = IN_DIR/clonemap_tiles/map/$tile$.map
-
 
 # The area/landmask of interest:
 # If None, area/landmask is limited for cells with ldd value.
@@ -199,21 +198,20 @@ using_modflow6=True
 
 
 [modflowTransientInputOptions]
-
 # the following is None for an online coupling between PCR-GLOBWB and MODFLOW
 #
-# - global extent
-dischargeInputNC               = None
+# - global extent, with discharge
+dischargeInputNC               = FORCING_DIR/discharge.zarr
 runoffInputNC                  = None
-groundwaterRechargeInputNC     = None
+groundwaterRechargeInputNC     = FORCING_DIR/gwRecharge.zarr
 groundwaterAbstractionInputNC  = None
 channelStorageInputNC          = None
 
-
 valuesRechargeAndAbstractionInMonthlyTotal = True
 
-estimateDischargeFromRunoff = True
-valuesRunoffInMonthlyTotal  = True
+# saturated area fraction map
+useSatAreaFracMapForTransient = True
+satAreaFracInputNC = FORCING_DIR/sat_area_fraction_monthly.nc
 
 # initial conditions for groundwater head (unit: m)
 groundwaterHeadLayer1Ini = None
@@ -223,16 +221,12 @@ usingPredefinedInitialHead = False
 # - if False, the initial groundwater head(s) will be based on the steady state simulation using the input defined in modflowSteadyStateInputOptions
 # - if True , the following initial conditions of the groundwater head will be based on the steady state simulation using the input defined in modflowSteadyStateInputOptions
 # - Note: For the online coupling PCR-GLOBWB-MODFLOW, we have to first define the initial conditions of groundwater head (usingPredefinedInitialHead = True)
-
-
-# - satAreaFrac input, this is required for estimating drain elevation (surface water height)
-satAreaFracInputNC = None
+gwRechargeDownscale = True
+gwRechargeDownscaleFactor = FORCING_DIR/gwRecharge_correction_factor.zarr
+precipitationFile = FORCING_DIR/precipitation.nc
 
 #######################################################################################################################################################
-
 [modflowSteadyStateInputOptions]
-
-estimateDischargeFromRunoff = False
 
 # The following input maps used for the steady state run
 # - average discharge (unit: m3/s)
@@ -247,6 +241,7 @@ avgGroundwaterAbstractionInputMap = 0.0
 avgChannelStorageInputMap         = None
 
 # saturated area fraction map
+useSatAreaFracMapForSteadyState = True
 satAreaFracInputMap = FORCING_DIR/sat_area_fraction_average.nc
 
 # initial estimate for groundwater head (unit: m)
