--- a/.gitignore
+++ b/.gitignore
@@ -127,7 +127,8 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
-
+.png
+.out 
 .out
 .snakemake/
 
@@ -135,4 +136,5 @@ run_calibration/model_job_scripts/_slurmOut/
 run_initial_conditions/model_job_scripts/slurmOut/
 run_simulation/model_job_scripts/slurmOut/
 
-analysis/
+analysis/validation_gswp3-w5e5/data
+
